# arabic-pdf-generator-from-url

./: .env example  .gitignore  README.md  build_and_run.sh  pyproject.toml
app/: __init__.py  config.py  routes.py
app/services/: pdf_service.py
app/static/css/: main.css
app/static/js/: main.js
app/templates/: base.html  index.html
